--- a/index.html
+++ b/index.html
@@ -2141,7 +2141,7 @@ BP 20000 Libreville</div>
                     </div>
                     
                     <div class="vault-input-group">
-                        <label>Montant objectif</label>
+                        <label>Montant du coffre-fort</label>
                         <div class="vault-amount-input">
                             <span class="vault-currency-symbol">Fcfa</span>
                             <input type="number" placeholder="0,00" id="new-vault-target">
