--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de paiement</div>
-                            <div class="card-meta">F<h6>cfa</h6> 500 000 / jour</div>
+                            <div class="card-meta">Fcfa 500 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -255,7 +255,7 @@
                         </div>
                         <div class="card-info">
                             <div class="card-name">Plafond de retrait</div>
-                            <div class="card-meta">F<h6>cfa</h6> 200 000 / jour</div>
+                            <div class="card-meta">Fcfa 200 000 / jour</div>
                         </div>
                         <div class="card-toggle">
                             <i class="fas fa-chevron-right"></i>
@@ -338,7 +338,7 @@
                         </div>
                         <div class="limit-details">
                             <h3>Plafond actuel</h3>
-                            <div class="current-limit">500 000 <span>FCFA / jour</span></div>
+                            <div class="current-limit">500 000 <span>Fcfa / jour</span></div>
                             <div class="limit-status">
                                 <i class="fas fa-check-circle"></i>
                                 <span>Limite active</span>
@@ -351,7 +351,7 @@
                         <div class="usage-bar">
                             <div class="usage-progress" style="width: 35%"></div>
                         </div>
-                        <div class="usage-text">175 000 FCFA utilisés sur 500 000 FCFA</div>
+                        <div class="usage-text">175 000 Fcfa utilisés sur 500 000 Fcfa</div>
                     </div>
 
                     <div class="input-group">
@@ -402,7 +402,7 @@
                         </div>
                         <div class="limit-details">
                             <h3>Plafond actuel</h3>
-                            <div class="current-limit">200 000 <span>FCFA / jour</span></div>
+                            <div class="current-limit">200 000 <span>Fcfa / jour</span></div>
                             <div class="limit-status">
                                 <i class="fas fa-check-circle"></i>
                                 <span>Limite active</span>
@@ -415,7 +415,7 @@
                         <div class="usage-bar">
                             <div class="usage-progress withdrawal-progress" style="width: 60%"></div>
                         </div>
-                        <div class="usage-text">120 000 FCFA retirés sur 200 000 FCFA</div>
+                        <div class="usage-text">120 000 Fcfa retirés sur 200 000 Fcfa</div>
                     </div>
 
                     <div class="atm-locations">
@@ -1272,7 +1272,7 @@ BP 20000 Libreville</div>
                         <label>Montant à recharger</label>
                         <div class="input-field">
                             <input type="number" id="topup-amount" placeholder="Ex: 50000" min="1000" max="5000000" oninput="updateTopupButton()">
-                            <span class="currency">F CFA</span>
+                            <span class="currency">Fcfa</span>
                         </div>
                     </div>
 
@@ -1371,7 +1371,7 @@ BP 20000 Libreville</div>
                         <label>Montant à transférer</label>
                         <div class="input-field">
                             <input type="number" id="transfer-amount" placeholder="0" min="0" step="1">
-                            <span class="currency">F <h6>cfa</h6></span>
+                            <span class="currency">Fcfa</span>
                         </div>
                     </div>
 
