--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                         <div class="balance-details">
                             <div class="balance-detail">
                                 <div>Revenus mensuels</div>
-                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">CFA</span> 245 200,<small>00</small></div>
+                                <div class="detail-value">Fcfa 245 200,<small>00</small></div>
                             </div>
                             <div class="divider"></div>
                             <div class="balance-detail">
                                 <div>Dépenses mensuelles</div>
-                                <div class="detail-value"><span class="currency-symbol">F</span> <span class="currency-code">CFA</span> 133 274,<small>00</small></div>
+                                <div class="detail-value">Fcfa 133 274,<small>00</small></div>
                             </div>
                         </div>
                     </div>
@@ -893,7 +893,7 @@
                     </div>
                     
                     <div class="input-group">
-                        <label>Montant (Fcfa)</label>
+                        <label>Montant Fcfa</label>
                         <div class="input-field">
                             <input type="number" placeholder="0,00" id="virement-amount">
                         </div>
