--- a/index.html
+++ b/index.html
@@ -1615,7 +1615,7 @@ BP 20000 Libreville</div>
                                             <span class="stat-value">600 000 Fcfa</span>
                                         </div>
                                         <div class="stat-item">
-                                            <span class="stat-label">Ma cotisation</span>
+                                            <span class="stat-label">Cotisation/membre</span>
                                             <span class="stat-value">50 000 Fcfa/mois</span>
                                         </div>
                                         <div class="stat-item">
@@ -1726,7 +1726,7 @@ BP 20000 Libreville</div>
                                 <i class="fas fa-wallet"></i>
                             </div>
                             <div class="stat-content-detail">
-                                <span class="stat-label-detail">Ma cotisation</span>
+                                <span class="stat-label-detail">Cotisation/membre</span>
                                 <span class="stat-value-detail" id="detail-my-contribution">0 Fcfa</span>
                             </div>
                         </div>
