--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@ BP 20000 Libreville</div>
                             </div>
                             
                             <div class="tontine-input-group">
-                                <label>Cotisation mensuelle</label>
+                                <label>Cotisation</label>
                                 <div class="tontine-amount-input">
                                     <span class="tontine-currency-symbol">Fcfa</span>
                                     <input type="number" placeholder="0,00" id="first-tontine-amount">
