--- a/index.html
+++ b/index.html
@@ -1559,8 +1559,14 @@ BP 20000 Libreville</div>
                                         <option value="">Sélectionner...</option>
                                         <option value="weekly">Chaque semaine</option>
                                         <option value="monthly">Chaque fin de mois</option>
-                                        <option value="custom">Date personnalisée</option>
                                     </select>
+                                </div>
+                            </div>
+                            
+                            <div class="tontine-input-group">
+                                <label>Date de début de la tontine</label>
+                                <div class="tontine-input-field">
+                                    <input type="date" id="first-tontine-start-date">
                                 </div>
                             </div>
                             
